--- a/app/views/challenges/index.html.haml
+++ b/app/views/challenges/index.html.haml
@@ -1,17 +1,36 @@
-%h1 Listing challenges
+= render('shared/header_menu')
 
-%table
-  %tr
-    %th
-    %th
-    %th
-
+%div(class="container-fluid")
+  %div(class="row" )
+    %div(class="col-md-6")
+      %h3 チャレンジ項目
+  %div(class="row group-frame" )
+    %div(class="col-md-1") ID/Level
+    %div(class="col-md-3") 名前
+    %div(class="col-md-6") 説明
+    %div(class="col-md-2")
   - @challenges.each do |challenge|
-    %tr
-      %td= link_to 'Show', challenge
-      %td= link_to 'Edit', edit_challenge_path(challenge)
-      %td= link_to 'Destroy', challenge, :method => :delete, :data => { :confirm => 'Are you sure?' }
-
-%br
-
-= link_to 'New Challenge', new_challenge_path
+    %div(class="row group-frame")
+      %div(class="col-md-1 group-id")
+        = challenge.group
+      %div(class="col-md-3")
+        = link_to(challenge.caption || '(未入力)', challenge)
+      %div(class="col-md-6")
+        %span(class="ellipsis")
+          = challenge.description && challenge.description[0..40]
+      %div(class="col-md-1")
+        = link_to('編集', edit_challenge_path(challenge), class: 'btn btn-info')
+      %div(class="col-md-1")
+        = link_to('削除', challenge, method: :delete, data: { confirm: '削除してよろしいですか?' }, class: 'btn btn-danger')
+  %div(class="row group-frame")
+    = form_for @challenge do |f|
+      %div(class="form-group")
+        = f.label(:group, '追加する行動のID:')
+        = f.text_field(:group, class: 'flat input-sm', placeholder: '(数値)' )
+        = f.submit('追加', name: 'create')
+      - if @challenge.errors.any?
+        #error_explanation
+          %h2= "#{pluralize(@challenge.errors.count, "error")} prohibited this challenge from being saved:"
+          %ul
+            - @challenge.errors.full_messages.each do |msg|
+              %li= msg
