チャレンジ項目を編集できるようになった。初期データの登録スクリプトを用意する途中だけど、背中が痛いので、今日のところはここでコミット

--- a/app/views/challenges/edit.html.haml
+++ b/app/views/challenges/edit.html.haml
@@ -1,7 +1,91 @@
-%h1 Editing challenge
+= render('shared/header_menu')
 
-= render 'form'
-
-= link_to 'Show', @challenge
-\|
-= link_to 'Back', challenges_path
+%div(class="container-fluid")
+  = form_for(@challenge) do |f|
+    %div(class="row group-frame")
+      = f.label(:group, "ID:#{@challenge.group}", class: 'col-md-1 level-id')
+      %div(class="col-md-3 form-group")
+        = f.label(:caption, '名前', class: 'param-caption')
+        = f.text_field(:caption, placeholder: '例：XX DIET', class: 'fill_parent flat input-sm')
+      %div(class="col-md-4")
+        %div(class="form-group" )
+          = f.label(:description, '説明', class: 'param-caption')
+          = f.text_area(:description, class: 'fill_parent_high form-control flat')
+        %div(class="form-group right" )
+          %div(class="row")
+            = f.label(:param_0, 'ダイエット効果', class: 'param-caption col-md-6')
+            %div(class="col-md-6")
+              = f.number_field(:param_0, class: 'flat input-sm form-control')
+        %div(class="form-group right" )
+          %div(class="row")
+            = f.label(:param_1, '取り組みやすさ', class: 'param-caption  col-md-6')
+            %div(class="col-md-6")
+              = f.number_field(:param_1, class: 'flat input-sm form-control ')
+        %div(class="form-group right" )
+          %div(class="row")
+            = f.label(:param_2, '健康度', class: 'param-caption col-md-6')
+            %div(class="col-md-6")
+              = f.number_field(:param_2, class: 'flat input-sm form-control ')
+        %div(class="form-group" )
+          %div(class="row")
+            = f.label(:category, '分類', class: 'param-caption col-md-4')
+            %div(class="col-md-8")
+              = f.select(:category, [%w(食事アクション 食事アクション), %w(間食アクション 間食アクション), %w(運動アクション 運動アクション)], prompt: '選択してください', class: 'form-control')
+        %div(class="form-group clearRight" )
+          = f.label(:comment, '向いている人', class: 'param-caption')
+          = f.text_area(:comment, class: 'fill_parent_low form-control flat')
+      %div(class="col-md-4")
+        %div(class="row")
+          %div(class="form-group" )
+            = f.label(:description_1, 'ブロンズ・メダル', class: 'param-caption')
+            = f.text_area(:description_1, class: 'fill_parent_low form-control flat')
+          %div(class="form-group" )
+            = f.label(:description_2, 'シルバー・メダル', class: 'param-caption')
+            = f.text_area(:description_2, class: 'fill_parent_low form-control flat')
+          %div(class="form-group" )
+            = f.label(:description_3, 'ゴールド・メダル', class: 'param-caption')
+            = f.text_area(:description_3, class: 'fill_parent_low form-control flat')
+          %div(class="form-group" )
+            = f.label(:description_4, 'マスター・メダル', class: 'param-caption')
+            = f.text_area(:description_4, class: 'fill_parent_low form-control flat')
+        %div(class="row")
+          = image_tag(picture_challenge_path(@challenge), class: 'medal')
+          = f.file_field(:image_file)
+    - @challenge.levels.each do |level|
+      = f.fields_for 'levels_attributes[]', level do |fl|
+        %div(class="row  item-frame")
+          = fl.label(:level, "level:#{level.level}", class: 'col-md-1 level-id')
+          %div(class="col-md-7")
+            %div(class="row")
+              %div(class="col-md-5 form-group")
+                = fl.label(:caption, '名前', class: 'param-caption')
+                = fl.text_field(:caption, placeholder: '例：○○をする', class: 'fill_parent flat input-sm')
+              %div(class="col-md-7")
+                %div(class="form-group" )
+                  = fl.label(:description, '説明', class: 'param-caption')
+                  = fl.text_area(:description, class: 'fill_parent_high form-control flat')
+                %div(class="form-group" )
+                  %div(class="row")
+                    = fl.label(:star_count, '獲得スター', class: 'param-caption col-md-6')
+                    %div(class="col-md-6")
+                      = fl.number_field(:star_count, class: 'flat input-sm form-control')
+                %div(class="form-group" )
+                  %div(class="row")
+                    = fl.label(:term, '達成度MAX', class: 'param-caption col-md-6')
+                    %div(class="col-md-6")
+                      = fl.number_field(:term, class: 'flat input-sm form-control')
+            %div(class="row")
+              = image_tag(picture_level_path(level), class: 'scene')
+              = fl.file_field(:image_file)
+          %div(class="col-md-4")
+            %div(class="form-group" )
+              = fl.label(:tips, 'ダイエット通信', class: 'param-caption')
+              = fl.text_area(:tips, class: 'fill_parent_high form-control flat')
+            %div(class="form-group" )
+              = fl.label(:comment, '達成時コメント', class: 'param-caption')
+              = fl.text_area(:comment, class: 'fill_parent_high form-control flat')
+            = fl.hidden_field(:group)
+            = fl.hidden_field(:level)
+            = fl.hidden_field(:id)
+    %div(class="row group-frame right")
+      = f.submit('保存', class: 'btn btn-large btn-primary')
