--- a/app/views/challenges/index.html.haml
+++ b/app/views/challenges/index.html.haml
@@ -17,7 +17,7 @@
         = link_to(challenge.caption || '(未入力)', challenge)
       %div(class="col-md-6")
         %span(class="ellipsis")
-          = challenge.description && challenge.description[0..40]
+          = challenge.description && (challenge.description[0..30] + '……' )
       %div(class="col-md-1")
         = link_to('編集', edit_challenge_path(challenge), class: 'btn btn-info')
       %div(class="col-md-1")
