集計画面の大枠だけできた

--- a/app/views/shared/_header_menu.html.haml
+++ b/app/views/shared/_header_menu.html.haml
@@ -4,6 +4,8 @@
   %div(class="collapse navbar-collapse")
     %ul(class="nav navbar-nav")
       %li
+        %a(href="/summary") ユーザ動向
+      %li
         %a(href="/challenges") チャレンジ項目
       %li
         %a(href="/counsels") DDクリニック
